--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.12.5",
+    "@gsap/react": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.5",
+    "embla-carousel-react": "^8.1.5",
+    "gsap": "npm:@gsap/shockingly@^3.12.5",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
