--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 always-auth=true
-//npm.greensock.com/:_authToken=25434b6c-520e-4a3e-8ffe-2d8aba532cee
+//npm.greensock.com/:_authToken={GSAP_TOKEN}
 @gsap:registry=https://npm.greensock.com
