--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 always-auth=true
 //npm.greensock.com/:_authToken={GSAP_TOKEN}
+# //npm.greensock.com/:_authToken=3df309a2-ba03-4b0d-880d-2cdc8e0881a6
 @gsap:registry=https://npm.greensock.com
